# Programming-part-2

./: .gitignore
lab01/: Report template.md  Report templit.md
lab01/project01/: CMakeLists.txt
lab01/project02/: CmakeLists.txt
lab01/project03/: CMakeLists.txt
lab01/project04/: CMakeLists.txt
lab01/project04/app/: CMakeLists.txt
lab01/project04/lib/: CMakeLists.txt
lab01/project04/tests/: CMakeLists.txt
lab01/project05/: CMakeLists.txt  main.cpp  vcpkg.json
lab01/varient_1/: CMakeLists.txt
lab01/varient_1/app/: main.cpp
lab01/varient_1/lib/include/: math_utils.hpp
lab01/varient_1/lib/src/: math_utils.cpp
lab01/varient_1/tests/: test_math_utils.cpp
lab02/: Report templit.md
lab02/task01/: CMakeLists.txt  main.cpp
lab02/task02/: CMakeLists.txt  main.cpp
lab02/task03/: CMakeLists.txt  main.cpp
lab02/task04/: CMakeLists.txt  main.cpp
lab02/task05/: CMakeLists.txt  main.cpp
lab02/task06/: CMakeLists.txt  main.cpp
lab02/task07/: CMakeLists.txt  main.cpp
lab02/task08/: CMakeLists.txt  main.cpp
lab02/task09/: CMakeLists.txt  main.cpp
lab02/task10/: CMakeLists.txt  main.cpp
lab02/task11/: CMakeLists.txt  main.cpp
lab03/: CMakeLists.txt  README.md
lab03/include/: Student.hpp
lab03/src/: Student.cpp  main.cpp
lab03/uml/: diagram.puml
lab04/: CMakeLists.txt  README.md
lab04/include/: Student.hpp
lab04/src/: Student.cpp  main.cpp
lab04/tests/: test_Student.cpp
lab04/uml/: diagram.puml
lab05/: CMakeLists.txt  README.md  main.cpp
lab05/private/: Course.cpp  Department.cpp  Professor.cpp  Student.cpp  University.cpp
lab05/public/: Course.hpp  Department.hpp  Professor.hpp  Student.hpp  University.hpp
lab05/tests/: test_University.cpp
lab05/uml/: diagram.puml
lab06/: CMakeLists.txt  README.md  main.cpp
lab06/assets/uml/: diagram.uml
lab06/private/: Car.cpp  Engine.cpp  Seat.cpp  Transmission.cpp  Wheel.cpp
lab06/public/: Car.hpp  Engine.hpp  Seat.hpp  Transmission.hpp  Wheel.hpp
lab06/tests/: test_car.cpp
lab07/: CMakeLists.txt  README.md  main.cpp
lab07/assets/uml/: diagram.puml
lab07/private/: PassengerCar.cpp  RefrigeratedTruck.cpp  Vehicle.cpp
lab07/public/: PassengerCar.h  RefrigeratedTruck.h  Truck.h  Vehicle.h
lab07/tests/: test_vehicles.cpp
lab08/: CMakeLists.txt  README.md  main.cpp
lab08/assets/uml/: diagram.puml
lab08/private/: PassengerCar.cpp  RefrigeratedTruck.cpp  Truck.cpp  Vehicle.cpp
lab08/public/: PassengerCar.h  RefrigeratedTruck.h  Vehicle.h
lab08/tests/: test_vehicles.cpp
lab09/: CMakeLists.txt  README.md
lab09/task_1/: CMakeLists.txt  main.cpp
lab09/task_1/private/: Device.cpp  InputDevice.cpp  OutputDevice.cpp  TouchDisplay.cpp
lab09/task_1/public/: Device.h  InputDevice.h  OutputDevice.h  TouchDisplay.h
lab09/task_1/tests/: test_task_1.cpp
lab09/task_1/uml/: diagram.puml
lab09/task_2/: CMakeLists.txt  main.cpp
lab09/task_2/private/: Athlete.cpp  CollegeAthlete.cpp  Student.cpp
lab09/task_2/public/: Athlete.h  CollegeAthlete.h  Student.h
lab09/task_2/tests/: test_task_2.cpp
lab09/task_2/uml/: diagram.puml
lab10/: CMakeLists.txt  README.md  main.cpp
lab10/include/: variant_utils.h
lab10/tests/: test_variant_utils.cpp
lab11/: CMakeLists.txt  README.md  main.cpp
lab11/assets/uml/: diagram.puml
lab11/include/: grade_book.h  grade_threshold.h  named_record.h
lab11/tests/: test_grade_book.cpp
lab12/: CMakeLists.txt  README.md  main.cpp
lab12/assets/uml/: diagram.puml
lab12/include/: Simple_ptr.h  Smart_nodes.h  Student.h  Student_array.h
lab12/src/: Smart_nodes.cpp  Student.cpp  Student_array.cpp
lab12/tests/: test_resource.cpp
lab13/: CMakeLists.txt  README.md  main.cpp
lab13/data/: input.txt
lab13/private/: StringUtils.cpp  Ticket.cpp  TicketProcessor.cpp
lab13/public/: StringUtils.h  Ticket.h  TicketProcessor.h
lab13/tests/: test_tickets.cpp
lab14/: CMakeLists.txt  README.md
lab14/data/: input.txt
lab14/include/: container_analyzer.hpp  record.hpp
lab14/src/: container_analyzer.cpp  main.cpp  record.cpp
lab14/tests/: test_lab14.cpp
lab15/: CMakeLists.txt  README.md
lab15/include/: BookCatalog.hpp
lab15/src/: BookCatalog.cpp  main.cpp
lab15/tests/: test_book_catalog.cpp
lab16/: CMakeLists.txt  README.md
lab16/include/: book.hpp  simple_forward_list.hpp  simple_vector.hpp
lab16/src/: main.cpp
lab16/tests/: test_list.cpp  test_vector.cpp
lab17/: CMakeLists.txt  README.md
lab17/include/: book.h  catalog.h
lab17/src/: catalog.cpp  main.cpp
lab17/tests/: test_catalog.cpp
project03/app/: main.cpp
project03/tests/: test_math_utils.cpp
project04/lib/src/: math_utils.cpp
project04/tests/: test_math_utils.cpp
varient_1/: vcpkg.json
